Bug fix remove unnecessary white space below pipeline visualization

--- a/frontend/packages/dev-console/src/components/pipelines/PipelineVisualizationGraph.scss
+++ b/frontend/packages/dev-console/src/components/pipelines/PipelineVisualizationGraph.scss
@@ -5,7 +5,6 @@ $gutter: 1.8em;
   background: var(--pf-global--BackgroundColor--100);
   padding: var(--pf-global--spacer--md);
   margin: var(--pf-global--spacer--md) 0;
-  height: 20em;
   overflow: auto;
   position: relative;
   -webkit-overflow-scrolling: touch;
